--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Box Icons Link -->
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <title>PORTFOLIO</title>
+    <title>coder.hoodie</title>
 </head>
 
 <body>
